src/test/ui/parser/keyword-for-as-identifier.stderr
error: expected pattern, found keyword `for`
  --> $DIR/keyword-for-as-identifier.rs:4:9
   |
LL |     let for = "foo";
   |         ^^^ expected pattern

error: aborting due to previous error

